@@ -1,3 +1,9 @@
+2008-10-15	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	PR 1331/networking
+	* init.c: Improve comments and explanation of options to
+	rtems_telnetd_initialize.
+
 2008-09-17	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* init.c: Rename STACK_CHECKER_ON to more appropriate
